--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TestProj2</string>
+    <string name="enter_start_number_txt">Enter Start Number</string>
+    <string name="enter_end_number_txt">Enter End Number</string>
+    <string name="enter_two_number_txt">Enter Two Number</string>
 </resources>
